--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
       <section class="social__media">
         <div class="social__media--wrap">
           <div class="footer__logo">
-            <a href="/" id="footer__logo">COLOR</a>
+            <a href="/" id="footer__logo">Dinesh</a>
           </div>
-          <p class="website__rights">© COLOR 2020. All rights reserved</p>
+          <p class="website__rights">© Dineshchandar-R_Profile 2020. All rights reserved</p>
           <div class="social__icons">
             <a href="/" class="social__icon--link" target="_blank"
               ><i class="fab fa-facebook"></i
