--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,16 @@
     <!-- About Section -->
     <div class="main" id="about">
       <div class="main__container">
-        <div class="main__img--container">
-          <div class="main__img--card"><img src="./Imgs/IDfinal2.png" alt="Profile Image" class="profile_img"></div>
-        </div>
+        <!-- <div class="main__img--card2">
+          <img src="./Imgs/phone-solid.svg" alt="Intrest Image" class="img"></div>
+        </div> -->
         <div class="main__content">
           <h2>Contact Me</h2>
-          <p>Aspiring Data Scientist and an award-winning product manager with experience in ML/DL applications, Computer Vision and Product Management. Aim to use my strong project management, analytics skills, detail-oriented and time-bound abilities to achieve the organization's goals.</p>
-          <button class="main__btn"><a href="https://s3.amazonaws.com/symp.csm.usprod/clemson/files/414/4149e25eb661714ef9b7557035be3c7e.pdf?X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAID3RBESXBCESHUGA%2F20220924%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220924T042621Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Signature=36de3686843fc45160fb6fe57adcdc348c490e080500efcb1992a4dea17dd2ca"target="_blank"> Resume </a></button>
+          <li class="social__icon--link">Mobile: +1-(864) 6337150 </li>
+          <li class="social__icon--link">e-mail: dineshchandar.12693@gmail.com </li>
+          <li>GitHub:<a href="https://github.com/DineshchandarR"target="_blank" class="social__icon--link" > https://github.com/DineshchandarR </a></li>
+          <li><a href="https://www.linkedin.com/in/dineshchandar-ravichandran/" target="_blank" class="social__icon--link"><i class="fab fa-linkedin"></i> linkedin.com/in/dineshchandar-ravichandran
+          </a></li>
         </div>
       </div>
     </div>
