--- a/index.html
+++ b/index.html
@@ -29,12 +29,21 @@
             <a href="#about" class="navbar__links" id="about-page">About</a>
           </li>
           <li class="navbar__item">
-            <a href="#experience" class="navbar__links" id="experience-page"
-              >Experience</a>
+            <a href="#experience" class="navbar__links" id="experience-page">Experience</a>
           </li>
-          <li class="navbar__btn">
-            <a href="#sign-up" class="button" id="signup">Sign Up</a>
+          <li class="navbar__item">
+            <a href="#project" class="navbar__links" id="project-page">Projects</a>
           </li>
+          <li class="navbar__item">
+            <a href="#edu" class="navbar__links" id="edu-page">Education</a>
+          </li>
+          <li class="navbar__item">
+            <a href="#awards" class="navbar__links" id="awards-page">Awards</a>
+          </li>
+          <li class="navbar__item">
+            <a href="/contact.html" class="navbar__links" id="Contact">Contact Me</a>
+          </li>
+         
         </ul>
       </div>
     </nav>
@@ -46,9 +55,6 @@
         <p class="typewrite" data-period="2000" data-type='[ "M.S. in C.S., Clemson University", "Data Science Enthusiast","G.A @ Clemson AI-LAB " ,"EX-Amazon Sr.PMT-Intern" ]' >
         <span class="wrap"></span>
         </p>
-      
-        <!-- <p class="hero__description">Unlimited Possibilities</p> -->
-        <button class="main__btn"><a href="#">Explore</a></button>
       </div>
     </div>
 
@@ -56,12 +62,18 @@
     <div class="main" id="about">
       <div class="main__container">
         <div class="main__img--container">
-          <div class="main__img--card"><img src="./Imgs/IDfinal2.png" alt="Profile Image" class="profile_img"></div>
+         <div class="main__imgCard"><img src="./Imgs/IDfinal2.png" alt="Profile Image" class="profile_img"></div> 
+         <button class="main__btn"><a href="https://drive.google.com/file/d/1nANPCWSNMvDmqZ9k1wI2lJPszOaqeFxA/view"target="_blank"><i class="fas fa-file-download"></i> Resume </a></button>
         </div>
         <div class="main__content">
-          <h2>About Me</h2>
+          <h1>About Me</h1>
           <p>Aspiring Data Scientist and an award-winning product manager with experience in ML/DL applications, Computer Vision and Product Management. Aim to use my strong project management, analytics skills, detail-oriented and time-bound abilities to achieve the organization's goals.</p>
-          <button class="main__btn"><a href="https://s3.amazonaws.com/symp.csm.usprod/clemson/files/414/4149e25eb661714ef9b7557035be3c7e.pdf?X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAID3RBESXBCESHUGA%2F20220924%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220924T042621Z&X-Amz-SignedHeaders=host&X-Amz-Expires=3600&X-Amz-Signature=36de3686843fc45160fb6fe57adcdc348c490e080500efcb1992a4dea17dd2ca"target="_blank"> Resume </a></button>
+          <br>
+          <h3>Intrest</h3>
+          <p><i class="fas fa-brain"></i> Deep-Learning and Machine Learning </p>
+          <p><i class="fas fa-layer-group"></i> AWS Cloud Architecture </p>
+          <p><i class="fas fa-people-carry"></i> Product Management  </p>
+          <p><i class="fas fa-gamepad"></i> Java based video game development </p>
         </div>
       </div>
     </div>
@@ -123,10 +135,10 @@
     </div>
 
     <!-- Projects Section -->
-    <div class="experience" id="Projects">
+    <div class="project" id="project">
       <h1>ACADEMIC PROJECTS</h1>
-      <div class="experience__wrapper">
-        <div class="experience__card">
+      <div class="project__wrapper">
+        <div class="project__card">
           <h2> Video Caption using S2S model </h2>
           <h3><u>Platform:</u>Python</h3>
           <p>
@@ -135,9 +147,9 @@
               <li><u>Result:</u> The model was able to achieve BLEU score of 0.71.</li>
             </ul>
           </p>
-          <div class="experience__btn"><button><href src= "#">Know More</href></button></div>
+          <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> will add github links later -->
         </div>
-        <div class="experience__card">
+        <div class="project__card">
           <h2> Medical Company AWS Architecture Design.  </h2>
           <h3><u>Platform:</u>Amazon Web Services</h3>
           <p>
@@ -145,9 +157,9 @@
               <li><u>Description:</u> Designed a detailed architecture and deployed a cloud solution for a medical startup company (SaaS) looking to shift their existing application to AWS</li>
             </ul>
           </p>
-          <div class="experience__btn"><button><href src= "#">Know More</href></button></div>
+          <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> -->
         </div>
-        <div class="experience__card">
+        <div class="project__card">
           <h2> Credit-card fraud detection </h2>
           <h3><u>Platform:</u>Python</h3>
           <p>
@@ -155,9 +167,9 @@
               <li><u>Description:</u> Implemented an unsupervised model using Self Organizing Maps to predict fraudulent applications.</li>
             </ul>
           </p>
-          <div class="experience__btn"><button><href src= "#">Know More</href></button></div>
+          <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> -->
         </div>
-        <div class="experience__card">
+        <div class="project__card">
           <h2>Video Movie Recommendation  </h2>
           <h3><u>Platform:</u>Python</h3>
           <p>
@@ -165,87 +177,61 @@
               <li><u>Description:</u> Implemented Deep-learning models to recommend movies to the users based on movie categories and user ratings using Boltzmann machine and Auto-encoders methods.</li>
             </ul>
           </p>
-          <div class="experience__btn"><button><href src= "#">Know More</href></button></div>
+          <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> -->
         </div>
       </div>
     </div>
 
-    <!-- Intrest Section -->
-    <div class="main" id="Intrest">
-      <div class="main__container">
-        <div class="main__content">
-          <h1>Intrest</h1>
-          <p><ul>
-            <li> Working Deep-Learning and Machine Learning </li>
-            <li> Working on Java based video game projects </li>
-            <li> Developing Cloud Architecture in AWS  </li>
-          </ul>
-        </p>
-          <!-- <button class="main__btn"><a href="#">Sign Up</a></button> -->
+    <!-- Education Section -->
+    <div class="edu" id="edu">
+      <div class="edu__container">
+        <div class="edu__content">
+          <h1><i class="fas fa-graduation-cap"></i>Education</h1>
+          <TABLE>
+            <TR>
+            <TD><h3>Master’s in Computer Science,</h3><br> <a href="http://www.clemson.edu/" target="_blank" >Clemson University</a><br> Clemson, SC, USA</TD>
+            <TD><p>May 2023</p></TD>
+            </TR>
+            <TR>
+            <TD><h3>Post Graduate Diploma in Advanced Computing,</h3><br> <a href="https://www.cdac.in/index.aspx" target="_blank" > Center for Development of Advanced Computing</a><br>Mumbai, MH, India</TD>
+            <TD><p>July 2017</p></TD>
+            </TR>
+            <TR>
+              <TD><h3>Bachelor of Engineering in Mechanical Engineering,</h3><br> <a href="https://www.sathyabama.ac.in/" target="_blank" > Sathyabama University </a> <br>Chennai, TN, India</TD>
+              <TD><p>April 2014</p></TD>
+              </TR>
+            </TABLE>
         </div>
-        <div class="main__img--container">
-          <div class="main__img--card" id="card-2">
-            <img src="./Imgs/heart-solid.svg" alt="Intrest Image" class="img"></div>
-          </div>
+ 
+      </div>
+    </div>
+
+      <!-- Awards Section -->
+      <div class="edu" id="awards">
+      <div class="edu__container">
+        <div class="edu__content">
+          <h1><i class="fas fa-award">Awards</i></h1>
+          <p> <p1>Best Technology Executive</p1> Atom Technologies Annual Award (2019). </p>
+          <p> <p1>Excellence Award</p1> Sathyabama University (2014).</p>
         </div>
+  
       </div>
     </div>
 
     <!-- Footer Section -->
     <div class="footer__container">
-      <div class="footer__links">
-        <div class="footer__link--wrapper">
-          <div class="footer__link--items">
-            <h2>About Us</h2>
-            <a href="/sign__up">How it works</a> <a href="/">Testimonials</a>
-            <a href="/">Careers</a> <a href="/">Terms of Service</a>
-          </div>
-          <div class="footer__link--items">
-            <h2>Contact Us</h2>
-            <a href="contact.html">Contact</a> <a href="/">Support</a>
-            <a href="/">Destinations</a>
-          </div>
-        </div>
-        <div class="footer__link--wrapper">
-          <div class="footer__link--items">
-            <h2>Videos</h2>
-            <a href="/">Submit Video</a> <a href="/">Ambassadors</a>
-            <a href="/">Agency</a>
-          </div>
-          <div class="footer__link--items">
-            <h2>Social Media</h2>
-            <a href="/">Instagram</a> <a href="/">Facebook</a>
-            <a href="/">Youtube</a> <a href="/">Twitter</a>
-          </div>
-        </div>
-      </div>
       <section class="social__media">
         <div class="social__media--wrap">
-          <div class="footer__logo">
-            <a href="/" id="footer__logo">Dinesh</a>
-          </div>
+          <p class="website__rights"><a href="/credits.html">Credits</a></p>
           <p class="website__rights">© Dineshchandar-R_Profile 2020. All rights reserved</p>
           <div class="social__icons">
-            <a href="/" class="social__icon--link" target="_blank"
-              ><i class="fab fa-facebook"></i
-            ></a>
-            <a href="/" class="social__icon--link"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="/" class="social__icon--link"
-              ><i class="fab fa-youtube"></i
-            ></a>
-            <a href="/" class="social__icon--link"
-              ><i class="fab fa-linkedin"></i
-            ></a>
-            <a href="/" class="social__icon--link"
-              ><i class="fab fa-twitter"></i
-            ></a>
+            <a href="https://github.com/DineshchandarR" target="_blank" class="social__icon--link"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/dineshchandar-ravichandran/" target="_blank" class="social__icon--link"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
       </section>
     </div>
 
-    <script src="app.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
