--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#awards" class="navbar__links" id="awards-page">Awards</a>
           </li>
           <li class="navbar__item">
-            <a href="/contact.html" class="navbar__links" id="Contact">Contact Me</a>
+            <a href="./contact.html" class="navbar__links" id="Contact">Contact Me</a>
           </li>
          
         </ul>
@@ -63,7 +63,7 @@
       <div class="main__container">
         <div class="main__img--container">
          <div class="main__imgCard"><img src="./Imgs/IDfinal2.png" alt="Profile Image" class="profile_img"></div> 
-         <button class="main__btn"><a href="https://drive.google.com/file/d/1nANPCWSNMvDmqZ9k1wI2lJPszOaqeFxA/view"target="_blank"><i class="fas fa-file-download"></i> Resume </a></button>
+         <a href="https://drive.google.com/file/d/1nANPCWSNMvDmqZ9k1wI2lJPszOaqeFxA/view"target="_blank"><button class="main__btn"><i class="fas fa-file-download"></i> Resume</button></a>
         </div>
         <div class="main__content">
           <h1>About Me</h1>
@@ -222,7 +222,7 @@
     <div class="footer__container">
       <section class="social__media">
         <div class="social__media--wrap">
-          <p class="website__rights"><a href="/credits.html">Credits</a></p>
+          <p class="website__rights"><a href="./credits.html">Credits</a></p>
           <p class="website__rights">© Dineshchandar-R_Profile 2020. All rights reserved</p>
           <div class="social__icons">
             <a href="https://github.com/DineshchandarR" target="_blank" class="social__icon--link"><i class="fab fa-github"></i></a>
