--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <div class="navbar__container">
         <a href="#home" id="navbar__logo"><img src="./Imgs/DCR.png" alt="MainLogo class" class="logo"></a>
         <div class="navbar__toggle" id="mobile-menu">
-          <span class="bar"></span> <span class="bar"></span>
+          <span class="bar"></span> 
+          <span class="bar"></span>
           <span class="bar"></span>
         </div>
         <ul class="navbar__menu">
@@ -43,7 +44,6 @@
           <li class="navbar__item">
             <a href="./contact.html" class="navbar__links" id="Contact">Contact Me</a>
           </li>
-         
         </ul>
       </div>
     </nav>
@@ -63,7 +63,7 @@
       <div class="main__container">
         <div class="main__img--container">
          <div class="main__imgCard"><img src="./Imgs/IDfinal2.png" alt="Profile Image" class="profile_img"></div> 
-         <a href="https://drive.google.com/file/d/1nANPCWSNMvDmqZ9k1wI2lJPszOaqeFxA/view"target="_blank"><button class="main__btn"><i class="fas fa-file-download"></i> Resume</button></a>
+         <button class="main__btn"><a href="https://drive.google.com/file/d/1nANPCWSNMvDmqZ9k1wI2lJPszOaqeFxA/view" target="_blank"><i class="fas fa-file-download"></i> Resume</a></button>
         </div>
         <div class="main__content">
           <h1>About Me</h1>
@@ -87,9 +87,9 @@
           <h3>Clemson University (AI-LAB) | Clemson, South Carolina | March 2022- Till Date</h3>
           <p>
             <ul>
-              <li>Working on deep learning research to develop a cancer detection model using Digital breast tomosynthesis images by performing: Image Classification, Object Detection, and Image segmentation.</li>
+              <li>Working on deep learning research to develop a cancer detection model using Digital Breast Tomosynthesis images by performing: Image Classification, Object Detection, and Image segmentation.</li>
               <li><u>Technology used:</u> Python, PyTorch, TensorFlow, Faster RCNN.</li>
-              <li><u>Result:</u> Research On-going.</li>
+              <li><u>Result:</u> Research ongoing.</li>
             </ul>
           </p>
           <div class="experience__btn"></div>
@@ -113,9 +113,8 @@
           <p>
             <ul>
               <li>Atom technologies, an NTT DATA company, is a leading end-to-end payment solution provider with over 150,000 domestic and international clients.</li>
-              <li><u>Skills:</u> : Developing and designing business architecture, business strategy, trend, risk, and system-impact analysis, team management, coordination with multiple cross-functional teams, end-to-end project management using SDLC methods (Agile, Prototyping, and Waterfall), and Business visualization using Power BI.</li>
-              <li><u>Result:</u> Achieved multiple successful payment product integrations, aiding integration with the new business and improving the overall transaction volumes.
-                Headed and designed the TITAN project from a product perspective, streamlining all core processes and saving 4-6 person-hours daily. Also eliminated manual activity for five processes by implementing system-driven processes and reduced process time for some applications by 60%—Awarded Best Technology Executive for my contribution to the project.</li>
+              <li><u>Skills:</u> Developing and designing business architecture, business strategy, trend, risk, and system-impact analysis, team management, coordination with multiple cross-functional teams, end-to-end project management using SDLC methods (Agile, Prototyping, and Waterfall), and Business visualization using Power BI.</li>
+              <li><u>Result:</u> Achieved multiple successful payment product integrations, aiding integration with the new business, and improving the overall transaction volumes. Headed and designed the TITAN project from a product perspective, streamlining all core processes and saving 4-6 person-hours daily. Also eliminated manual activity for five processes by implementing system-driven processes and reduced process time for some applications by 60%—Awarded Best Technology Executive for my contribution to the project.</li>
             </ul>
           </p>
           <div class="experience__btn"></div>
@@ -125,11 +124,10 @@
           
           <p>
             <ul>
-              <li> WORKSHOP ENGINEER at Rhine Exports Pvt. Ltd | India | Nov' 2015 to Feb' 2017 </li>
-              <li> PROJECT TRAINEE/INTERN at Bhabha Atomic Research Center| India | Apr' 2014 to May 2014 </li>
+              <li> <u>WORKSHOP ENGINEER</u> at Rhine Exports Pvt. Ltd | India | Nov' 2015 to Feb' 2017 </li>
+              <li> <u>PROJECT TRAINEE/INTERN</u> at Bhabha Atomic Research Center| India | Apr' 2014 to May 2014 </li>
             </ul>
           </p>
-          <div class="experience__btn"></div>
         </div>
       </div>
     </div>
@@ -154,7 +152,8 @@
           <h3><u>Platform:</u>Amazon Web Services</h3>
           <p>
             <ul>
-              <li><u>Description:</u> Designed a detailed architecture and deployed a cloud solution for a medical startup company (SaaS) looking to shift their existing application to AWS</li>
+              <li><u>Description:</u> : Designed a detailed architecture and deployed a cloud solution for a medical startup company (SaaS) looking to shift the existing application to AWS.</li>
+              <li><u>Result:</u> Successfully architected a cloud solution.</li>
             </ul>
           </p>
           <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> -->
