--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a href="#edu" class="navbar__links" id="edu-page">Education</a>
           </li>
           <li class="navbar__item">
+            <a href="#skills" class="navbar__links" id="skills-page">Skills</a>
+          </li>
+          <li class="navbar__item">
             <a href="#awards" class="navbar__links" id="awards-page">Awards</a>
           </li>
           <li class="navbar__item">
@@ -201,9 +204,40 @@
               </TR>
             </TABLE>
         </div>
- 
       </div>
     </div>
+
+      <!-- Skills -->
+      <div class="edu" id="skills">
+        <div class="edu__container">
+          <div class="edu__content">
+            <h1><i class="fab fa-medapps"></i> Skills</h1>
+            <TABLE>
+              <TR>
+              <TD><h3>Programming Languages</h3></TD>
+              <TD><p>Python(Pandas, FRCNN, PyTorch, Matplotlib, TensorFlow, Optuna, Flask), Java, R-language, and C++</p></TD>
+              </TR>
+              <TR>
+              <TD><h3>Technology</h3></TD>
+              <TD><p>Amazon Web Services, HTML, JavaScript, and CSS</p></TD>
+              </TR>
+              <TR>
+                <TD><h3>Database</TD>
+                <TD><p>MySQL</p></TD>
+                </TR>
+              <TR>
+                <TD><h3>Enterprise Management</TD>
+                <TD><p>Jira, Salesforce, Tableau, and Power- BI</p></TD>
+              </TR>
+              <TR>
+                <TD><h3>Documentation</TD>
+                <TD><p>M.S.Office 365, Draw.io, and WireFrame</p></TD>
+              </TR>
+              </TABLE>
+          </div>
+   
+        </div>
+      </div>
 
       <!-- Awards Section -->
       <div class="edu" id="awards">
