--- a/credits.html
+++ b/credits.html
@@ -40,7 +40,7 @@
     <div class="footer__container">
         <div class="footer__links">
           <div class="footer__link--wrapper">
-            <p class="website__rights">© Dineshchandar-R_Profile 2020. All rights reserved</p>
+            <p class="website__rights"><a href="https://github.com/DineshchandarR/CPSC8750/blob/main/LICENSE.md" target="_blank">© Dineshchandar-Ravichadran 2022</a></p>
             </div>
           </div>
         </section>
