--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="main" id="about">
       <div class="main__container">
         <div class="main__img--container">
-         <div class="main__imgCard"><img src="./Imgs/IDfinal2.png" alt="Profile Image" class="profile_img"></div> 
+         <div class="main__imgCard"><img src="./Imgs/IDfinal2-removebg-preview.png" alt="Profile Image" class="profile_img"></div> 
          <button class="main__btn"><a href="https://drive.google.com/file/d/1nANPCWSNMvDmqZ9k1wI2lJPszOaqeFxA/view" target="_blank"><i class="fas fa-file-download"></i> Resume</a></button>
         </div>
         <div class="main__content">
@@ -256,7 +256,7 @@
       <section class="social__media">
         <div class="social__media--wrap">
           <p class="website__rights"><a href="./credits.html">Credits</a></p>
-          <p class="website__rights">© Dineshchandar-R_Profile 2020. All rights reserved</p>
+          <p class="website__rights"><a href="https://github.com/DineshchandarR/CPSC8750/blob/main/LICENSE.md" target="_blank">© Dineshchandar-Ravichadran 2022</a></p>
           <div class="social__icons">
             <a href="https://github.com/DineshchandarR" target="_blank" class="social__icon--link"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/dineshchandar-ravichandran/" target="_blank" class="social__icon--link"><i class="fab fa-linkedin"></i></a>
