Added Project Githublink

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <h1>ACADEMIC PROJECTS</h1>
       <div class="project__wrapper">
         <div class="project__card">
-          <h2> Video Caption using S2S model </h2>
+          <h2><a href="https://github.com/DineshchandarR/CPSC-8430-Deep-Learning-001/tree/main/HW2_1" target="_blank"> Video Caption using S2S model </a></h2>
           <h3><u>Platform:</u>Python</h3>
           <p>
             <ul>
@@ -148,7 +148,6 @@
               <li><u>Result:</u> The model was able to achieve BLEU score of 0.71.</li>
             </ul>
           </p>
-          <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> will add github links later -->
         </div>
         <div class="project__card">
           <h2> Medical Company AWS Architecture Design.  </h2>
@@ -159,17 +158,15 @@
               <li><u>Result:</u> Successfully architected a cloud solution.</li>
             </ul>
           </p>
-          <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> -->
         </div>
         <div class="project__card">
-          <h2> Credit-card fraud detection </h2>
+          <h2><a href="https://github.com/DineshchandarR/Deeplearning_self/blob/main/Hybrid_SOM%2BANN.pyhttps://github.com/DineshchandarR/Deeplearning_self/blob/main/Hybrid_SOM%2BANN.py" target="_blank"> Credit-card fraud detection </a></h2>
           <h3><u>Platform:</u>Python</h3>
           <p>
             <ul>
               <li><u>Description:</u> Implemented an unsupervised model using Self Organizing Maps to predict fraudulent applications.</li>
             </ul>
           </p>
-          <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> -->
         </div>
         <div class="project__card">
           <h2>Video Movie Recommendation  </h2>
@@ -179,7 +176,6 @@
               <li><u>Description:</u> Implemented Deep-learning models to recommend movies to the users based on movie categories and user ratings using Boltzmann machine and Auto-encoders methods.</li>
             </ul>
           </p>
-          <!-- <div class="project__btn"><button><href src= "#">Know More</href></button></div> -->
         </div>
       </div>
     </div>
