Remonal of ph no.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </p>
         </div>
         <div class="project__card">
-          <h2><a href="https://github.com/DineshchandarR/Deeplearning_self/blob/main/Hybrid_SOM%2BANN.pyhttps://github.com/DineshchandarR/Deeplearning_self/blob/main/Hybrid_SOM%2BANN.py" target="_blank"> Credit-card fraud detection </a></h2>
+          <h2><a href="https://github.com/DineshchandarR/Deeplearning_self/blob/main/Hybrid_SOM%2BANN.py" target="_blank"> Credit-card fraud detection </a></h2>
           <h3><u>Platform:</u>Python</h3>
           <p>
             <ul>
