--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <a href="#experience" class="navbar__links" id="experience-page">Experience</a>
           </li>
           <li class="navbar__item">
+            <a href="#awards" class="navbar__links" id="awards-page">Awards</a>
+          </li>
+          <li class="navbar__item">
             <a href="#project" class="navbar__links" id="project-page">Projects</a>
           </li>
           <li class="navbar__item">
@@ -41,9 +44,9 @@
           <li class="navbar__item">
             <a href="#skills" class="navbar__links" id="skills-page">Skills</a>
           </li>
-          <li class="navbar__item">
+          <!-- <li class="navbar__item">
             <a href="#awards" class="navbar__links" id="awards-page">Awards</a>
-          </li>
+          </li> -->
           <li class="navbar__item">
             <a href="./contact.html" class="navbar__links" id="Contact">Contact Me</a>
           </li>
@@ -134,6 +137,15 @@
         </div>
       </div>
     </div>
+
+      <!-- Awards Section -->
+      <div class="award" id="awards">
+          <div class="award__content">
+            <h1><!--<i class="fas fa-award"></i>--> AWARDS</h1>
+            <p> <p1>Best Technology Executive</p1> Atom Technologies Annual Award (2019). </p>
+            <p> <p1>Excellence Award</p1> Sathyabama University (2014).</p>
+          </div>
+      </div>  
 
     <!-- Projects Section -->
     <div class="project" id="project">
@@ -236,7 +248,7 @@
       </div>
 
       <!-- Awards Section -->
-      <div class="edu" id="awards">
+      <!-- <div class="edu" id="awards">
       <div class="edu__container">
         <div class="edu__content">
           <h1><i class="fas fa-award">Awards</i></h1>
@@ -245,7 +257,7 @@
         </div>
   
       </div>
-    </div>
+    </div> -->
 
     <!-- Footer Section -->
     <div class="footer__container">
